[workspace]
members = [
    "utils",
    "day_1_1",
    "day_1_2",
    "day_2_1",
    "day_2_2",
    "day_3_1",
    "day_3_2",
    "day_4_1",
    "day_4_2",
    "day_5_1",
    "day_5_2",
    "day_6_1",
    "day_6_2",
    "day_7_1",
    "day_7_2",
    "day_8_1",
    "day_8_2",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
utils = { path = "utils" }
eyre = "0.6.5"

