[workspace]
members = [
    "utils",
    "day_1_1",
    "day_1_2",
    "day_2_1",
    "day_2_2",
    "day_3_1",
    "day_3_2",
    "day_4_1",
    "day_4_2",
    "day_5_1",
    "day_5_2",
    "day_6_1",
    "day_6_2",
    "day_7_1",
    "day_7_2",
    "day_8_1",
    "day_8_2",
    "day_9_1",
    "day_9_2",
    "day_10_1",
    "day_10_2",
    "day_11_1",
    "day_11_2",
    "day_12_1",
    "day_12_2",
    "day_13_1",
    "day_13_2",
    "day_14_1",
    "day_14_2",
    "day_15_1",
    "day_15_2",
    "day_16_1",
    "day_16_2",
    "day_17_1",
    "day_17_2",
    "day_18_1",
    "day_18_2",
    "day_19_1",
    "day_19_2",
    "day_20_1",
    "day_20_2",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
utils = { path = "utils" }
eyre = "0.6.5"

